--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>You don't know js</title>
+    <script src="./script.js" defer></script>
 </head>
 <body>
 <h1>Вы не знаете JS (серия книг)</h1>
@@ -97,15 +98,15 @@
             <a href="https://github.com/azat-io/you-dont-know-js-ru/blob/master/async%20%26%20performance/README.md#you-dont-know-js-async--performance"
                target="_blank">Книга 5. Асинхронность и Производительность</a></h2>
         <ul>
-            <li>Введение</li>
-            <li>Предисловие</li>
-            <li>Глава 4: Генераторы</li>
-            <li>Глава 2: Колбеки</li>
-            <li>Глава 3: Обещания</li>
-            <li>Приложение A: Библиотека: asynquence</li>
-            <li>Глава 5: Производительность программы</li>
-            <li>Глава 6: Бенчмаркинг и настройка</li>
-            <li>Приложение B: Расширенные асинхронные шаблоны</li>
+           <li>Введение</li>
+           <li>Предисловие</li>
+           <li>Глава 4: Генераторы</li>
+           <li>Глава 2: Колбеки</li>
+           <li>Глава 3: Обещания</li>
+           <li>Приложение A: Библиотека: asynquence</li>
+           <li>Глава 5: Производительность программы</li>
+           <li>Глава 6: Бенчмаркинг и настройка</li>
+           <li>Приложение B: Расширенные асинхронные шаблоны</li>
             <li>Глава 1: Асинхронность: Сейчас и Тогда</li>
             <li>Приложение C: Благодарности!</li>
         </ul>
